CSS: Fix #notifications layout on mobile
refs #4562

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -206,6 +206,9 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+#layout:not(.minimal-layout) #notifications {
   padding-left: 12em;
 }
 
